[gd_scene load_steps=7 format=2]

[ext_resource path="res://StorageUI.gd" type="Script" id=1]
[ext_resource path="res://Health System/AmericanCaptain-MdEY.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[node name="Storage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -150.0
margin_bottom = -200.0
rect_min_size = Vector2( 650, 400 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 650.0
margin_bottom = 236.0
rect_min_size = Vector2( 600, 200 )

[node name="StorageContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 200 )

[node name="StorageLabel" type="Label" parent="VBoxContainer/HBoxContainer/StorageContainer"]
margin_right = 350.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
custom_fonts/font = SubResource( 2 )
text = "Storage"
valign = 2
autowrap = true

[node name="ItemsContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/StorageContainer"]
margin_top = 36.0
margin_right = 350.0
margin_bottom = 236.0
rect_min_size = Vector2( 350, 200 )
columns = 6

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 354.0
margin_right = 369.0
margin_bottom = 236.0
rect_min_size = Vector2( 15, 30 )

[node name="CurrentSelection" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 373.0
margin_right = 629.0
margin_bottom = 236.0

[node name="ItemName" type="Label" parent="VBoxContainer/HBoxContainer/CurrentSelection"]
margin_right = 256.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
custom_fonts/font = SubResource( 3 )
text = "Item Name"
valign = 2
autowrap = true

[node name="ItemDescription" type="Label" parent="VBoxContainer/HBoxContainer/CurrentSelection"]
margin_top = 36.0
margin_right = 256.0
margin_bottom = 236.0
rect_min_size = Vector2( 256, 200 )
custom_fonts/font = SubResource( 4 )
text = "This is where the item description will go and where it will begin to wrap. It goes down all the way to where the inventory is. "
autowrap = true

[node name="Inventory" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 650.0
margin_bottom = 276.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Inventory"]
margin_right = 160.0
margin_bottom = 36.0

[node name="PlayerInventoryLabel" type="Label" parent="VBoxContainer/Inventory/VBoxContainer"]
margin_right = 160.0
margin_bottom = 32.0
rect_min_size = Vector2( 160, 32 )
custom_fonts/font = SubResource( 1 )
text = "Player Inventory"
valign = 2
autowrap = true

[node name="InventoryContainer" type="HBoxContainer" parent="VBoxContainer/Inventory/VBoxContainer"]
margin_top = 36.0
margin_right = 160.0
margin_bottom = 36.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
